      processes run in exclusive manner within the simulator
    - Move queues from global tables to process data fields
  * Improve smpirun:
    - now accept -platform and -hostfile arguments
    - Pass the right rank value to processes according to the hostfile
  * Compile the examples by default, and use them as regression tests
  * Implement MPI_Wtime()
  
 SURF:
  * TCP_gamma can now be specified as command line option using
    --cfg=TCP_gamma:10000000.0
  * Change the --surf-path cmd line option into --cfg=path:
  
 XBT:
  * Also include strbuff from xbt.h public header
  * xbt_ex_display(): do not free the exception after displaying 
    This allows to do more with the given exception afterward.
    Users should call xbt_ex_free() themselves.
    
 Build Chain:
  * Do not require doxygen in maintainer mode

 -- Da SimGrid team <simgrid-devel@lists.gforge.inria.fr> 

SimGrid (3.3) stable; urgency=high

 OVERALL CHANGES:

  * JAVA BINDINGS for MSG (you dreamt of them? We made them)
    [Malek Cherier & Mt]

  * Introduce the SIMIX module: factorize code between MSG and GRAS.
    [Bruno Donassolo]
  
    Until now, GRAS were using MSG as an interface to SURF. It was
    quite difficult because both interface have several differences
    (MSG channels vs GRAS sockets were the most notable point).
   
    This also opens the gate to SMPI (which should occur soon) and speed
    up simulations by to 40% (even if it were not the main goal).
  
    ************************************** 
    *DO NOT MIX 3.2 RESULTS WITH 3.3 ONES* Simix may changes simulations!
    **************************************
    The point is that events occuring at the exact same timestamp are
    not scheduled in the same order with the old and new version. This
    may be enough to completely change the execution of simulations in
    some cases. Sorry for the inconvenience.

  * Cleanup and upgrade the XML format to push further scalability