@@ -86,7 +86,7 @@ void xbt_cfg_cpy(xbt_cfg_t tocopy, xbt_cfg_t * whereto)
   xbt_assert0(tocopy, "cannot copy NULL config");
 
   xbt_dict_foreach((xbt_dict_t) tocopy, cursor, name, variable) {
-    xbt_cfg_register(*whereto, name, variable->desc, variable->type, variable->min,
+    xbt_cfg_register(whereto, name, variable->desc, variable->type, NULL, variable->min,
                      variable->max, variable->cb_set, variable->cb_rm);
   }
 }
@@ -199,17 +199,18 @@ void xbt_cfgelm_free(void *data)
  */
 
 void
-xbt_cfg_register(xbt_cfg_t cfg,
-                 const char *name, const char *desc, e_xbt_cfgelm_type_t type,
+xbt_cfg_register(xbt_cfg_t *cfg,
+                 const char *name, const char *desc, e_xbt_cfgelm_type_t type, void *default_value,
                  int min, int max, xbt_cfg_cb_t cb_set, xbt_cfg_cb_t cb_rm)
 {
   xbt_cfgelm_t res;
 
-  xbt_assert(cfg);
+  if (*cfg==NULL)
+	 *cfg=xbt_cfg_new();
   xbt_assert4(type >= xbt_cfgelm_int && type <= xbt_cfgelm_peer,
               "type of %s not valid (%d should be between %d and %d)",
               name, type, xbt_cfgelm_int, xbt_cfgelm_peer);
-  res = xbt_dict_get_or_null((xbt_dict_t) cfg, name);
+  res = xbt_dict_get_or_null((xbt_dict_t) *cfg, name);
 
   if (res) {
     WARN1("Config elem %s registered twice.", name);
@@ -218,7 +219,7 @@ xbt_cfg_register(xbt_cfg_t cfg,
 
   res = xbt_new(s_xbt_cfgelm_t, 1);
   DEBUG8("Register cfg elm %s (%s) (%d to %d %s (=%d) @%p in set %p)",
-         name, desc, min, max, xbt_cfgelm_type_name[type], type, res, cfg);
+         name, desc, min, max, xbt_cfgelm_type_name[type], type, res, *cfg);
 
   res->desc = desc;
   res->type = type;
@@ -230,25 +231,33 @@ xbt_cfg_register(xbt_cfg_t cfg,
   switch (type) {
   case xbt_cfgelm_int:
     res->content = xbt_dynar_new(sizeof(int), NULL);
+    if (default_value)
+    	xbt_dynar_push(res->content,default_value);
     break;
 
   case xbt_cfgelm_double:
     res->content = xbt_dynar_new(sizeof(double), NULL);
+    if (default_value)
+    	xbt_dynar_push(res->content,default_value);
     break;
 
   case xbt_cfgelm_string:
     res->content = xbt_dynar_new(sizeof(char *), xbt_free_ref);
+    if (default_value)
+    	xbt_dynar_push(res->content,default_value);
     break;
 
   case xbt_cfgelm_peer:
     res->content = xbt_dynar_new(sizeof(xbt_peer_t), xbt_peer_free_voidp);
+    if (default_value)
+    	xbt_dynar_push(res->content,default_value);
     break;
 
   default:
     ERROR1("%d is an invalide type code", type);
   }
 
-  xbt_dict_set((xbt_dict_t) cfg, name, res, &xbt_cfgelm_free);
+  xbt_dict_set((xbt_dict_t) *cfg, name, res, &xbt_cfgelm_free);
 }
 
 /** @brief Unregister an element from a config set.
@@ -279,7 +288,7 @@ void xbt_cfg_unregister(xbt_cfg_t cfg, const char *name)
  * @fixme: this does not allow to set the description
  */
 
-void xbt_cfg_register_str(xbt_cfg_t cfg, const char *entry)
+void xbt_cfg_register_str(xbt_cfg_t *cfg, const char *entry)
 {
   char *entrycpy = xbt_strdup(entry);
   char *tok;
@@ -315,7 +324,7 @@ void xbt_cfg_register_str(xbt_cfg_t cfg, const char *entry)
               "Invalid type in config element descriptor: %s%s", entry,
               "; Should be one of 'string', 'int', 'peer' or 'double'.");
 
-  xbt_cfg_register(cfg, entrycpy, NULL, type, min, max, NULL, NULL);
+  xbt_cfg_register(cfg, entrycpy, NULL, type, NULL, min, max, NULL, NULL);
 
   free(entrycpy);               /* strdup'ed by dict mechanism, but cannot be const */
 }
@@ -415,9 +424,11 @@ static xbt_cfgelm_t xbt_cfgelm_get(xbt_cfg_t cfg,
   xbt_cfgelm_t res = NULL;
 
   res = xbt_dict_get_or_null((xbt_dict_t) cfg, name);
-  if (!res)
+  if (!res) {
+	  xbt_cfg_help(cfg);
     THROW1(not_found_error, 0,
            "No registered variable '%s' in this config set", name);
+  }
 
   xbt_assert3(type == xbt_cfgelm_any || res->type == type,
               "You tried to access to the config element %s as an %s, but its type is %s.",
@@ -1222,10 +1233,9 @@ static xbt_cfg_t make_set()
   xbt_cfg_t set = NULL;
 
   xbt_log_threshold_set(&_XBT_LOGV(xbt_cfg),xbt_log_priority_critical);
-  set = xbt_cfg_new();
-  xbt_cfg_register_str(set, "speed:1_to_2_int");
-  xbt_cfg_register_str(set, "peername:1_to_1_string");
-  xbt_cfg_register_str(set, "user:1_to_10_string");
+  xbt_cfg_register_str(&set, "speed:1_to_2_int");
+  xbt_cfg_register_str(&set, "peername:1_to_1_string");
+  xbt_cfg_register_str(&set, "user:1_to_10_string");
 
   return set;
 }                               /* end_of_make_set */
